Refactor: Replace Express server with Netlify Functions for serverless deployment
- Add netlify.toml with publish dir (public/) and functions dir (netlify/functions/)
- Add /api/* to /.netlify/functions/* redirect rules
- Create 10 serverless functions: events, config, register, create-order, verify-payment, admin-login, admin-registrations, admin-events, contact
- Add shared _db.js (PostgreSQL via DATABASE_URL) and _auth.js (JWT) helpers
- Switch DB config from 5 separate vars to single DATABASE_URL (Neon.tech compatible)
- Update all frontend API fetch URLs in script.js, admin/index.html, admin/login.html
- Fix admin event PUT/DELETE to use ?id= query params (no Express path params)
- Replace file upload with URL-based coordinator image input
- Clean up package.json: remove Express, helmet, multer, body-parser, rate-limiter

--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -173,7 +173,7 @@
     </div>
 
     <script>
-        const API_BASE_ADMIN = '/api/admin';
+        const API_BASE_ADMIN = '/.netlify/functions';
 
         // Check if already logged in
         if (localStorage.getItem('adminToken')) {
@@ -193,7 +193,7 @@
             submitBtn.disabled = true;
 
             try {
-                const res = await fetch(`${API_BASE_ADMIN}/login`, {
+                const res = await fetch(`${API_BASE_ADMIN}/admin-login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ username, password })
