--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -534,8 +534,8 @@
 
     <!-- Script -->
     <script>
-        const API_BASE_ADMIN = '/api/admin';
-        const API_BASE_PUBLIC = '/api';
+        const API_BASE_ADMIN = '/.netlify/functions';
+        const API_BASE_PUBLIC = '/.netlify/functions';
 
         const dashboardSection = document.getElementById('dashboard-section');
         const logoutBtn = document.getElementById('logout-btn');
@@ -605,7 +605,7 @@
         async function fetchRegistrations() {
             const token = localStorage.getItem('adminToken');
             try {
-                const res = await fetch(`${API_BASE_ADMIN}/registrations`, {
+                const res = await fetch(`${API_BASE_ADMIN}/admin-registrations`, {
                     headers: { 'Authorization': `Bearer ${token}` }
                 });
 
@@ -700,37 +700,13 @@
         // --- Coordinator Management Mock Logic ---
         let currentCoordinators = [];
 
-        // File Upload Logic
-        document.getElementById('coord-image-file').addEventListener('change', async (e) => {
-            const file = e.target.files[0];
-            if (!file) return;
-
-            const formData = new FormData();
-            formData.append('image', file);
-
-            try {
-                const token = localStorage.getItem('adminToken');
-                const res = await fetch(`${API_BASE_ADMIN}/upload`, {
-                    method: 'POST',
-                    headers: { 'Authorization': `Bearer ${token}` },
-                    body: formData
-                });
-
-                if (res.ok) {
-                    const data = await res.json();
-                    if (data.success) {
-                        document.getElementById('coord-image-path').value = data.path;
-                        alert('Image uploaded successfully!');
-                    } else {
-                        alert('Upload failed: ' + data.message);
-                    }
-                } else {
-                    alert('Upload failed. Server error.');
-                }
-            } catch (err) {
-                console.error('Upload Error:', err);
-                alert('Error uploading image.');
-            }
+        // Image URL Logic (Netlify can't write files to disk, use URL instead)
+        document.getElementById('coord-image-file').addEventListener('change', (e) => {
+            // Store selected file as a placeholder URL (randomuser.me) or entered URL
+            // The actual image is set via the URL text box below
+            document.getElementById('coord-image-path').value = 'https://randomuser.me/api/portraits/men/1.jpg';
+            alert('Note: File uploads are not supported in serverless mode.\nPlease paste a public image URL in the URL field instead, or leave blank for a default avatar.');
+            e.target.value = '';
         });
 
         window.addCoordinator = () => {
@@ -815,11 +791,11 @@
             const payload = { title, description, category, type, image_color, icon, rule_book, coordinators, day };
 
             try {
-                let url = `${API_BASE_ADMIN}/events`;
+                let url = `${API_BASE_ADMIN}/admin-events`;
                 let method = 'POST';
 
                 if (id) {
-                    url = `${API_BASE_ADMIN}/events/${id}`;
+                    url = `${API_BASE_ADMIN}/admin-events?id=${id}`;
                     method = 'PUT';
                 }
 
@@ -909,7 +885,7 @@
 
             try {
                 const token = localStorage.getItem('adminToken');
-                const res = await fetch(`${API_BASE_ADMIN}/events/${id}`, {
+                const res = await fetch(`${API_BASE_ADMIN}/admin-events?id=${id}`, {
                     method: 'DELETE',
                     headers: { 'Authorization': `Bearer ${token}` }
                 });
